k8s-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateways-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateways-api
  template:
    metadata:
      labels:
        component: gateways-api
    spec:
      containers:
        - name: gateways-api
          image: hub.docker.com/gateways-api:{BUILD_NO}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
