k8s-service.yml
apiVersion: v1
kind: Service
metadata:  
  name: gateways-api
spec:
  ports:
  - port : 80
    protocol: TCP
    targetPort: 80
  selector:
    component: gateways-api
  type: ClusterIP
